Implementação de recurso de login do usuário

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=mytasks
 spring.profiles.active=dev
+security.token.secret=${TOKEN_SECRET_KEY:my-secret-key-for-test}
+api.features.login=true
+api.features.register=false
